# app/controllers/api/v1/requests_controller.rb
@@ -8,7 +8,7 @@ class Api::V1::RequestsController < ApplicationController
     @q = Request.ransack(params[:q])
     @requests = @q.result
 
-    render json: @requests
+    render json: @requests.map { |req| JSON.parse(req.to_json({ state: req.state, pending_data: req.pending_data })) }
   end
 
   # GET /api/v1/requests/1
@@ -32,6 +32,8 @@ class Api::V1::RequestsController < ApplicationController
       Chatbot::WebhookService.new(@request, "/requests/#{@request.show_key}").notify_request_success
       sleep(5)
       Chatbot::WebhookService.new(@request, "/requests/#{@request.show_key}").notify_request_image
+      sleep(3)
+      Chatbot::WebhookService.new(@request, "/requests/#{@request.show_key}").notify_request_chassis
       render json: @request, status: :created
     else
       render json: @request.errors, status: :unprocessable_entity
@@ -41,6 +43,7 @@ class Api::V1::RequestsController < ApplicationController
   # PATCH/PUT /api/v1/requests/1
   def update
     if @request.update(request_params)
+      Chatbot::WebhookService.new(@request, "/requests/#{@request.show_key}").notify_request_updated
       render json: @request
     else
       render json: @request.errors, status: :unprocessable_entity
@@ -65,7 +68,7 @@ class Api::V1::RequestsController < ApplicationController
     # Only allow a list of trusted parameters through.
     def request_params
       # params.require(:request).permit(:user_phone, :user_email, :user_name, :part_name, :part_brand, :part_model, :part_year)
-      params.expect(request: [ :user_phone, :user_email, :user_name, :part_name, :part_brand, :part_model, :part_year, :part_image ])
+      params.expect(request: [ :user_phone, :user_email, :user_name, :part_name, :part_brand, :part_model, :part_year, :part_image, :part_chassis ])
     end
 
     def show_params
